# ros2_braccio_arm

arm_bot/: CMakeLists.txt  package.xml
arm_bot/launch/: arm_bot.launch.xml
arm_bot/rviz/: arm_bot_rviz.rviz
arm_bot/urdf/: arm_bot.urdf  common_properties.xacro
ba_control/: CMakeLists.txt  package.xml
ba_control/launch/: braccio_arm.control.launch.xml  braccio_arm.launch.xml
ba_control/rviz/: braccio_arm_rviz.rviz
ba_control/src/: parse_and_publish.cpp
ba_description/: CMakeLists.txt  package.xml
ba_description/launch/: braccio_arm.launch.xml
ba_description/urdf/: braccio.urdf
ba_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ba_moveit/config/: braccio_arm.ros2_control.xacro  braccio_arm.srdf  braccio_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ba_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
talk_listen/: CMakeLists.txt  package.xml
talk_listen/src/: listener.cpp  talker.cpp
turtle_control/: package.xml  setup.cfg  setup.py
turtle_control/turtle_control/: draw_circle.py  pose_subscriber.py  turtle_controller.py
